--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ edition = "2018"
 bincode = "1.3"
 criterion = "0.3"
 flatbuffers = "0.7"
+postcard = { version = "0.5", features = ["alloc"] }
 rand = "0.8"
 rkyv = "0.4"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 rand_pcg = "0.3"
