--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,15 @@ name = "rust_serialization_benchmark"
 version = "0.1.0"
 authors = ["David Koloski <djkoloski@gmail.com>"]
 edition = "2018"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+abomonation = "0.7"
+abomonation_derive = "0.5"
 bincode = "1.3"
+capnp = "0.14"
 criterion = "0.3"
 flatbuffers = "0.7"
 postcard = { version = "0.5", features = ["alloc"] }
@@ -18,6 +22,9 @@ serde_json = "1.0"
 
 [dev-dependencies]
 rand_pcg = "0.3"
+
+[build-dependencies]
+capnpc = "0.14"
 
 [[bench]]
 name = "minecraft_savedata"
