--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ postcard = { version = "0.5", features = ["alloc"] }
 rand = "0.8"
 rkyv = "0.4"
 serde = { version = "1.0", features = ["derive"] }
+serde_cbor = "0.11"
 serde_json = "1.0"
 
 [dev-dependencies]
