--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ bincode = "1.3"
 capnp = "0.14"
 criterion = "0.3"
 flatbuffers = "0.7"
+libflate = "1.0"
 postcard = { version = "0.5", features = ["alloc"] }
 rand = "0.8"
 rkyv = "0.4"
