--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ postcard = { version = "0.5", features = ["alloc"] }
 prost = "0.7"
 rand = "0.8"
 rkyv = "0.4"
+rmp-serde = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11"
 serde_json = "1.0"
