--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,15 @@ build = "build.rs"
 abomonation = "0.7"
 abomonation_derive = "0.5"
 bincode = "1.3"
+bytecheck = "0.4"
 capnp = "0.14"
 criterion = "0.3"
-flatbuffers = "0.7"
+flatbuffers = "0.8"
 libflate = "1.0"
 postcard = { version = "0.5", features = ["alloc"] }
 prost = "0.7"
 rand = "0.8"
-rkyv = "0.4"
+rkyv = { version = "0.4", features = ["validation"] }
 rmp-serde = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11"
