--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ build = "build.rs"
 abomonation = "0.7"
 abomonation_derive = "0.5"
 bincode = "1.3"
+borsh = "0.8"
 bytecheck = "0.4"
 capnp = "0.14"
 criterion = "0.3"
@@ -34,13 +35,5 @@ capnpc = "0.14"
 prost-build = { version = "0.7" }
 
 [[bench]]
-name = "log"
-harness = false
-
-[[bench]]
-name = "mesh"
-harness = false
-
-[[bench]]
-name = "minecraft_savedata"
+name = "bench"
 harness = false
