--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ capnp = "0.14"
 criterion = "0.3"
 flatbuffers = "0.8"
 libflate = "1.0"
+nachricht-serde = "0.2"
 postcard = { version = "0.5", features = ["alloc"] }
 prost = "0.7"
 rand = "0.8"
