--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ rmp-serde = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11"
 serde_json = "1.0"
+speedy = "0.7"
 
 [dev-dependencies]
 rand_pcg = "0.3"
