--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11"
 serde_json = "1.0"
 speedy = "0.7"
+ron = "0.6"
 
 [dev-dependencies]
 rand_pcg = "0.3"
