--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ ron = { version = "0.6", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_cbor = { version = "0.11", optional = true }
 serde_json = { version = "1.0", optional = true }
+simd-json = { version = "0.4", optional = true }
 speedy = { version = "0.7", optional = true }
 alkahest = { version = "0.1.4", optional = true, features = ["derive", "nightly"] } # "nightly" feature won't be required starting with rustc 1.55
 bytemuck = { version = "1.0" }
@@ -49,6 +50,7 @@ default = [
     "serde",
     "serde_cbor",
     "serde_json",
+    "simd-json",
     "speedy",
     "alkahest"
 ]
