--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,18 @@ build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# Some features may require multiple dependencies to compile properly
+# For example, benchmarking bincode requires two features: "serde" and "bincode"
+
 [dependencies]
 abomonation = { version = "0.7", optional = true }
 abomonation_derive = { version = "0.5", optional = true }
+# "nightly" feature won't be required starting with rustc 1.55
+alkahest = { version = "0.1.4", optional = true, features = ["derive", "nightly"] }
 bincode = { version = "1.3", optional = true }
 borsh = { version = "0.9", optional = true }
 bytecheck = { version = "0.6", optional = true }
+bytemuck = { version = "1.0", optional = true }
 capnp = { version = "0.14", optional = true }
 criterion = "0.3"
 flatbuffers = { version = "2.0", optional = true }
@@ -29,8 +35,7 @@ serde_cbor = { version = "0.11", optional = true }
 serde_json = { version = "1.0", optional = true }
 simd-json = { version = "0.4", optional = true }
 speedy = { version = "0.7", optional = true }
-alkahest = { version = "0.1.4", optional = true, features = ["derive", "nightly"] } # "nightly" feature won't be required starting with rustc 1.55
-bytemuck = { version = "1.0" }
+zstd = "0.9"
 
 [features]
 default = [
@@ -39,6 +44,7 @@ default = [
     "bincode",
     "borsh",
     "bytecheck",
+    "bytemuck",
     "capnp",
     "flatbuffers",
     "nachricht-serde",
@@ -52,7 +58,6 @@ default = [
     "serde_json",
     "simd-json",
     "speedy",
-    "alkahest"
 ]
 
 [dev-dependencies]
