--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ abomonation = { version = "0.7", optional = true }
 abomonation_derive = { version = "0.5", optional = true }
 # "nightly" feature won't be required starting with rustc 1.55
 alkahest = { version = "0.1.4", optional = true, features = ["derive", "nightly"] }
+bebop = { version = "2.3", optional = true }
 bincode = { version = "1.3", optional = true }
 borsh = { version = "0.9", optional = true }
 bytecheck = { version = "0.6", optional = true }
@@ -41,6 +42,7 @@ zstd = "0.9"
 default = [
     "abomonation",
     "abomonation_derive",
+    "bebop",
     "bincode",
     "borsh",
     "bytecheck",
@@ -64,9 +66,11 @@ default = [
 rand_pcg = "0.3"
 
 [build-dependencies]
+bebop-tools = "2.3"
 capnp = "0.14"
 capnpc = "0.14"
-prost-build = { version = "0.7" }
+flatc-rust = "0.2"
+prost-build = "0.7"
 
 [[bench]]
 name = "bench"
