--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ alkahest = { version = "0.1", optional = true, features = ["derive", "nightly"] 
 bebop = { version = "2.3", optional = true }
 bincode = { version = "1.3", optional = true }
 borsh = { version = "0.9", optional = true }
+bson = { version = "2.0", git = "https://github.com/djkoloski/bson-rust", branch = "master", optional = true }
 bytecheck = { version = "0.6", optional = true }
 bytemuck = { version = "1.7", optional = true }
 capnp = { version = "0.14", optional = true }
@@ -46,6 +47,7 @@ default = [
     "bebop",
     "bincode",
     "borsh",
+    "bson",
     "bytecheck",
     "bytemuck",
     "capnp",
