--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ rkyv = { version = "0.7", features = ["validation"], optional = true }
 rmp-serde = { version = "0.15", optional = true }
 ron = { version = "0.6", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
+serde_bare = { version = "0.5.0", optional = true }
 serde_cbor = { version = "0.11", optional = true }
 serde_json = { version = "1.0", optional = true }
 simd-json = { version = "0.4", optional = true }
@@ -59,6 +60,7 @@ default = [
     "rmp-serde",
     "ron",
     "serde",
+    "serde_bare",
     "serde_cbor",
     "serde_json",
     "simd-json",
