--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ bytecheck = { version = "0.6", optional = true }
 bytemuck = { version = "1.7", optional = true }
 capnp = { version = "0.14", optional = true }
 criterion = "0.3"
+dlhn = { version = "0.1", optional = true }
 flatbuffers = { version = "2.0", optional = true }
 libflate = "1.0"
 nachricht-serde = { version = "0.3", optional = true }
@@ -52,6 +53,7 @@ default = [
     "bytecheck",
     "bytemuck",
     "capnp",
+    "dlhn",
     "flatbuffers",
     "nachricht-serde",
     "postcard",
