--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ abomonation = { version = "0.7", optional = true }
 abomonation_derive = { version = "0.5", optional = true }
 # "nightly" feature won't be required starting with rustc 1.55
 alkahest = { version = "0.1", optional = true, features = ["derive", "nightly"] }
-bebop = { version = "2.3", optional = true }
+bebop = { version = "2.4", optional = true }
 bincode = { version = "1.3", optional = true }
 borsh = { version = "0.9", optional = true }
 bson = { version = "2.0", git = "https://github.com/djkoloski/bson-rust", branch = "master", optional = true }
@@ -46,7 +46,7 @@ default = [
     "abomonation",
     "abomonation_derive",
     "alkahest",
-    "bebop",
+    # "bebop",
     "bincode",
     "borsh",
     "bson",
@@ -73,7 +73,7 @@ default = [
 rand_pcg = "0.3"
 
 [build-dependencies]
-bebop-tools = "2.3"
+bebop-tools = "2.4"
 capnp = "0.14"
 capnpc = "0.14"
 flatc-rust = "0.2"
