--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ dlhn = { version = "0.1.1", optional = true }
 flatbuffers = { version = "2.1.2", optional = true }
 libflate = "1.2.0"
 nachricht-serde = { version = "0.4.0", optional = true }
+parity-scale-codec = { version = "3.2.1", features = ["full"], optional = true }
+parity-scale-codec-derive = { version = "3.1.3", optional = true }
 postcard = { version = "1.0.1", features = ["alloc"], optional = true }
 prost = { version = "0.10.4", optional = true }
 rand = "0.8.5"
@@ -57,6 +59,7 @@ default = [
   "dlhn",
   "flatbuffers",
   "nachricht-serde",
+  "scale",
   "postcard",
   "prost",
   "rkyv",
@@ -69,6 +72,8 @@ default = [
   "simd-json",
   "speedy",
 ]
+
+scale = ["parity-scale-codec", "parity-scale-codec-derive"]
 
 [dev-dependencies]
 rand_pcg = "0.3.1"
