--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ simd-json = { version = "=0.14.3", optional = true }
 simd-json-derive = { version = "=0.15.0", optional = true }
 speedy = { version = "=0.8.7", optional = true }
 wiring = { version = "=0.2.3", optional = true }
+quick-xml = { version = "=0.37.0", features = ["serialize"], optional = true }
 
 criterion = "=0.5.1"
 libflate = "=2.1.0"
