--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ version = "0.1.1"
 [dependencies]
 abomonation = { version = "0.7.3", optional = true }
 abomonation_derive = { version = "0.5.0", optional = true }
-alkahest = { version = "0.1.5", optional = true, features = ["derive", "nightly"] }
+alkahest = { version = "0.1.5", optional = true, features = [
+  "derive",
+  "nightly",
+] }
 bebop = { version = "2.4.9", optional = true }
 bincode = { version = "1.3.3", optional = true }
 bitcode = { version = "0.3.0", optional = true }
@@ -37,7 +40,8 @@ serde = { version = "1.0.153", features = ["derive"], optional = true }
 serde_bare = { version = "0.5.0", optional = true }
 serde_cbor = { version = "0.11.2", optional = true }
 serde_json = { version = "1.0.94", optional = true }
-simd-json = { version = "0.7.0", optional = true }
+simd-json = { version = "0.9.2", optional = true }
+simd-json-derive = { version = "0.9.2", optional = true }
 speedy = { version = "0.8.5", optional = true }
 zstd = "0.12.3+zstd.1.5.2"
 
@@ -70,6 +74,7 @@ default = [
   "simd-json",
   "speedy",
 ]
+simd-json = ["dep:simd-json", "simd-json-derive"]
 
 scale = ["parity-scale-codec", "parity-scale-codec-derive"]
 
