--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ bson = { version = "2.0", git = "https://github.com/djkoloski/bson-rust", branch
 bytecheck = { version = "0.6.10", optional = true }
 bytemuck = { version = "1.13.1", optional = true }
 capnp = { version = "0.16.0", optional = true }
+ciborium = { version = "0.2.0", optional = true }
 criterion = "0.4.0"
 dlhn = { version = "0.1.2", optional = true }
 flatbuffers = { version = "23.1.21", optional = true }
@@ -43,7 +44,7 @@ serde_json = { version = "1.0.94", optional = true }
 simd-json = { version = "0.9.2", optional = true }
 simd-json-derive = { version = "0.9.2", optional = true }
 speedy = { version = "0.8.5", optional = true }
-zstd = "0.12.3+zstd.1.5.2"
+zstd = "0.12.3"
 
 [features]
 default = [
@@ -58,12 +59,14 @@ default = [
   "bytecheck",
   "bytemuck",
   "capnp",
+  "ciborium",
   "dlhn",
   "flatbuffers",
   "nachricht-serde",
   "scale",
   "postcard",
   "prost",
+  "prost-build",
   "rkyv",
   "rmp-serde",
   "ron",
@@ -86,7 +89,7 @@ bebop-tools = "2.4.5"
 capnp = "0.16.0"
 capnpc = "0.16.3"
 flatc-rust = "0.2.0"
-prost-build = "0.11.8"
+prost-build = { version = "0.11.8", optional = true }
 
 [[bench]]
 harness = false
