--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ criterion = "0.4.0"
 dlhn = { version = "0.1.4", optional = true }
 flatbuffers = { version = "23.1.21", optional = true }
 libflate = "1.3.0"
+msgpacker = { version = "0.4", optional = true }
 nachricht-serde = { version = "0.4.0", optional = true }
 parity-scale-codec = { version = "3.5.0", features = ["full"], optional = true }
 parity-scale-codec-derive = { version = "3.1.4", optional = true }
@@ -64,6 +65,7 @@ default = [
   "ciborium",
   "dlhn",
   "flatbuffers",
+  "msgpacker",
   "nachricht-serde",
   "scale",
   "postcard",
