--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -31,6 +31,14 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
+      - name: Add wasm32 target
+        run: rustup target add wasm32-unknown-unknown
+
+      - name: Install Trunk
+        uses: baptiste0928/cargo-install@v2
+        with:
+          crate: trunk
+
       - name: bench
         shell: bash
         run: |
@@ -54,6 +62,10 @@ jobs:
 
           git add -A benchmark_results
           git add README.md
+
+          cd pages && trunk --config Trunk.prod.toml build --release --filehash=false
+          git add -A pages/dist
+
           git commit -m "[gh-actions] Update benchmarks"
 
       - name: Push changes
