--- a/tools/README.md.template
+++ b/tools/README.md.template
@@ -1,3 +1,5 @@
+{dne}
+
 # Rust serialization benchmark
 
 The goal of these benchmarks is to provide thorough and complete benchmarks for various rust
@@ -24,9 +26,9 @@ Zero-copy deserialization libraries have an additional set of benchmarks:
 
 Some benchmark results may be italicized and followed by an asterisk. Mouse over these for more details on what situation was benchmarked. Other footnotes are located at the bottom.
 
-## Last updated: ${date}
+## Last updated: {date}
 
-${results}
+{tables}{links}
 
 ## Footnotes:
 
