--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,36 @@
-[package]
+[workspace]
+members = [
+  "tools/bencher",
+  "tools/formatter",
+  "tools/parser",
+  "tools/schema",
+]
+
+[workspace.package]
+version = "0.1.0"
 authors = ["David Koloski <djkoloski@gmail.com>"]
-build = "build.rs"
 edition = "2021"
+license = "MIT"
+publish = false
+
+[workspace.dependencies]
+cargo_metadata = "0.15"
+clap = { version = "4", features = ["derive"] }
+regex = "1.9"
+schema = { path = "tools/schema" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tempfile = "3.6"
+time = "0.3"
+
+[package]
 name = "rust_serialization_benchmark"
-version = "0.1.1"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+publish.workspace = true
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 # Some features may require multiple dependencies to compile properly
@@ -26,7 +53,7 @@ bytecheck = { version = "0.6.10", optional = true }
 bytemuck = { version = "1.13.1", optional = true }
 capnp = { version = "0.16.1", optional = true }
 ciborium = { version = "0.2.0", optional = true }
-criterion = "0.4.0"
+criterion = "0.5"
 dlhn = { version = "0.1.4", optional = true }
 flatbuffers = { version = "23.1.21", optional = true }
 libflate = "1.3.0"
