Add missing rustfmt component to CI toolchain

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           toolchain: nightly
           override: true
-          components: rust-src
+          components: rust-src, rustfmt
 
       - uses: Swatinem/rust-cache@v2
 
