Add pages package to workspace
Also clean up workspace dependencies and add optimization flags for wasm

--- a/pages/.cargo/config.toml
+++ b/pages/.cargo/config.toml
@@ -1,3 +1,11 @@
+[build]
+# panic and lto cannot be configured via package profile, so we manually
+# add the it to the rustflags for this crate
+rustflags = [
+    "-Cpanic=abort",
+    "-Clinker-plugin-lto=true",
+]
+
 [unstable]
 build-std = ["std", "panic_abort"]
 build-std-features = ["panic_immediate_abort"]
