--- a/tools/formatter/Cargo.toml
+++ b/tools/formatter/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 publish.workspace = true
 
 [dependencies]
-clap.workspace = true
+clap = { workspace = true, features = ["derive"] }
 schema.workspace = true
-serde.workspace = true
+serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
