--- a/tools/schema/Cargo.toml
+++ b/tools/schema/Cargo.toml
@@ -7,4 +7,4 @@ license.workspace = true
 publish.workspace = true
 
 [dependencies]
-serde.workspace = true
+serde = { workspace = true, features = ["derive"] }
