[no-bench] Put release profile in config.toml to avoid issues with workspace.

--- a/pages/.cargo/config.toml
+++ b/pages/.cargo/config.toml
@@ -1,10 +1,9 @@
-[build]
-# panic and lto cannot be configured via package profile, so we manually
-# add the it to the rustflags for this crate
-rustflags = [
-    "-Cpanic=abort",
-    "-Clinker-plugin-lto=true",
-]
+[profile.release]
+codegen-units = 1
+lto = "fat"
+opt-level = 'z'
+panic = "abort"
+strip = "debuginfo"
 
 [unstable]
 build-std = ["std", "panic_abort"]
