[no-bench] Add interactive website via Github Pages (#46)
* Add github pages.

* Fix dist path.

* Remove dist path.

* Comment out benchmarks for now to speed up debugging.

* Use dist_prod instead of dist since dist is in .gitignore.

* [gh-actions] Update benchmarks

* Revert dist path to ../docs.

* Change step amount based on current value.

* [gh-actions] Update benchmarks

* Add deserialization and round trip benchmarks.

* [gh-actions] Update benchmarks

* Re-enable benchmarks.

* [gh-actions] Update benchmarks

* Add README.md to document interactive site.

* Fix compression/decompression time depending on compressed size instead of uncompressed size.

* Use json file instead of README.

* Use latest json file.

* Use stylist 0.12.1 since it works.

* Exclude crates without deserialize from deserialize/round trip.

* Use peaceiris/actions-gh-pages@v3 and add [no-bench].

* [no-bench] Remove newline from diff with master.

* Add pages package to workspace

Also clean up workspace dependencies and add optimization flags for wasm

* [gh-actions] Update benchmarks

* [no-bench] Put release profile in config.toml to avoid issues with workspace.

* [no-bench] Delete extra benchmarks generated during pr.

* [no-bench] Revert unintentional changes to generated files.

* [no-bench] Revert README.md changes resulting from extra benchmarks generated during pr.

* [no-bench] Use workspace dependency for web-sys.

* [no-bench] Add link to interactive site and its documentation to README.

---------

Co-authored-by: github-actions <github-actions@github.com>
Co-authored-by: David Koloski <djkoloski@gmail.com>

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           fetch-depth: 1
           submodules: true
-      
+
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
@@ -34,7 +34,16 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
+      - name: Add wasm32 target
+        run: rustup target add wasm32-unknown-unknown
+
+      - name: Install Trunk
+        uses: baptiste0928/cargo-install@v2
+        with:
+          crate: trunk
+
       - name: bench
+        if: "!contains(github.event.head_commit.message, '[no-bench]')"
         shell: bash
         run: |
 
@@ -64,3 +73,13 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
+
+      - name: Build Pages
+        shell: bash
+        run: cd pages && trunk --config Trunk.prod.toml build --release --filehash=false && cd ..
+
+      - name: Deploy Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./pages/dist
