--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+  "pages",
   "tools/bencher",
   "tools/formatter",
   "tools/parser",
@@ -15,13 +16,19 @@ publish = false
 
 [workspace.dependencies]
 cargo_metadata = "0.15"
-clap = { version = "4", features = ["derive"] }
+clap = "4"
+enum-iterator = "0.8"
+fixed-map = { version = "0.9", default-features = false }
 regex = "1.9"
 schema = { path = "tools/schema" }
-serde = { version = "1.0", features = ["derive"] }
+serde = "1.0"
 serde_json = "1.0"
+stylist = { version = "0.12", default-features = false }
 tempfile = "3.6"
 time = "0.3"
+wasm-bindgen = "0.2"
+web-sys = "0.3.60"
+yew = { version = "0.20", default-features = false }
 
 [package]
 name = "rust_serialization_benchmark"
