--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ nanoserde = {version = "0.1.33", optional = true }
 parity-scale-codec = { version = "3.5.0", features = ["full"], optional = true }
 parity-scale-codec-derive = { version = "3.1.4", optional = true }
 postcard = { version = "1.0.4", features = ["alloc"], optional = true }
+pot = { version = "3.0.0", optional = true }
 prost = { version = "0.11.9", optional = true }
 rand = "0.8.5"
 rkyv = { version = "0.7.41", features = ["validation"], optional = true }
@@ -107,6 +108,7 @@ default = [
   "nanoserde",
   "scale",
   "postcard",
+  "pot",
   "prost",
   "prost-build",
   "rkyv",
