--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,40 +51,40 @@ alkahest = { version = "0.1.5", optional = true, features = [
 ] }
 bebop = { version = "2.4.9", optional = true }
 bincode = { version = "1.3.3", optional = true }
-bitcode = { version = "0.4.0", optional = true }
-borsh = { version = "0.10.3", optional = true }
+bitcode = { version = "0.5.0", optional = true }
+borsh = { version = "1.1.1", features = ["derive"], optional = true }
 # TODO: Unfork after bson adds support for pre-warmed serialization buffers
 # https://github.com/mongodb/bson-rust/pull/328
 bson = { version = "2.6.0", git = "https://github.com/djkoloski/bson-rust", branch = "master", optional = true }
-bytecheck = { version = "0.6.10", optional = true }
-bytemuck = { version = "1.13.1", optional = true }
-capnp = { version = "0.16.1", optional = true }
-ciborium = { version = "0.2.0", optional = true }
+bytecheck = { version = "0.6.11", optional = true }
+bytemuck = { version = "1.14.0", optional = true }
+capnp = { version = "0.18.3", optional = true }
+ciborium = { version = "0.2.1", optional = true }
 criterion = "0.5"
-dlhn = { version = "0.1.4", optional = true }
-flatbuffers = { version = "23.1.21", optional = true }
+dlhn = { version = "0.1.6", optional = true }
+flatbuffers = { version = "23.5.26", optional = true }
 libflate = "1.3.0"
-msgpacker = { version = "0.4", optional = true }
+msgpacker = { version = "0.4.3", optional = true }
 nachricht-serde = { version = "0.4.0", optional = true }
 nanoserde = {version = "0.1.35", optional = true }
-parity-scale-codec = { version = "3.5.0", features = ["full"], optional = true }
-parity-scale-codec-derive = { version = "3.1.4", optional = true }
-postcard = { version = "1.0.4", features = ["alloc"], optional = true }
+parity-scale-codec = { version = "3.6.5", features = ["full"], optional = true }
+parity-scale-codec-derive = { version = "3.6.5", optional = true }
+postcard = { version = "1.0.8", features = ["alloc"], optional = true }
 pot = { version = "3.0.0", optional = true }
-prost = { version = "0.11.9", optional = true }
+prost = { version = "0.12.1", optional = true }
 rand = "0.8.5"
-rkyv = { version = "0.7.41", features = ["validation"], optional = true }
-rmp-serde = { version = "1.1.1", optional = true }
-ron = { version = "0.8.0", optional = true }
-serde = { version = "1.0.153", features = ["derive"], optional = true }
+rkyv = { version = "0.7.42", features = ["validation"], optional = true }
+rmp-serde = { version = "1.1.2", optional = true }
+ron = { version = "0.8.1", optional = true }
+serde = { version = "1.0.190", features = ["derive"], optional = true }
 serde_bare = { version = "0.5.0", optional = true }
 serde_cbor = { version = "0.11.2", optional = true }
-serde_json = { version = "1.0.96", optional = true }
+serde_json = { version = "1.0.108", optional = true }
 simd-json = { version = "0.13.4", optional = true }
 simd-json-derive = { version = "0.13.0", optional = true }
 speedy = { version = "0.8.6", optional = true }
-savefile = { version = "0.16", optional = true }
-savefile-derive = { version = "0.16", optional = true }
+savefile = { version = "0.16.2", optional = true }
+savefile-derive = { version = "0.16.2", optional = true }
 zstd = "0.12.3"
 
 [features]
@@ -132,11 +132,11 @@ scale = ["parity-scale-codec", "parity-scale-codec-derive"]
 rand_pcg = "0.3.1"
 
 [build-dependencies]
-bebop-tools = "2.4.5"
-capnp = "0.16.0"
-capnpc = "0.16.3"
+bebop-tools = "2.8.7"
+capnp = "0.18.3"
+capnpc = "0.18.0"
 flatc-rust = "0.2.0"
-prost-build = { version = "0.11.8", optional = true }
+prost-build = { version = "0.12.1", optional = true }
 
 [[bench]]
 harness = false
