--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ bson = { version = "2.6.0", git = "https://github.com/djkoloski/bson-rust", bran
 bytecheck = { version = "0.6.11", optional = true }
 bytemuck = { version = "1.14.0", optional = true }
 capnp = { version = "0.18.3", optional = true }
+cbor4ii = { version = "0.3.1", features = [ "use_std", "serde1" ], optional = true }
 ciborium = { version = "0.2.1", optional = true }
 criterion = "0.5"
 dlhn = { version = "0.1.6", optional = true }
@@ -100,6 +101,7 @@ default = [
   "bytecheck",
   "bytemuck",
   "capnp",
+  "cbor4ii",
   "ciborium",
   "dlhn",
   "flatbuffers",
