--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ capnp = { version = "0.18.3", optional = true }
 cbor4ii = { version = "0.3.1", features = [ "use_std", "serde1" ], optional = true }
 ciborium = { version = "0.2.1", optional = true }
 criterion = "0.5"
+databuf = { version = "0.5", optional = true }
 dlhn = { version = "0.1.6", optional = true }
 flatbuffers = { version = "23.5.26", optional = true }
 libflate = "1.3.0"
@@ -103,6 +104,7 @@ default = [
   "capnp",
   "cbor4ii",
   "ciborium",
+  "databuf",
   "dlhn",
   "flatbuffers",
   "msgpacker",
