--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,9 @@ alkahest = { version = "0.1.5", optional = true, features = [
   "nightly",
 ] }
 bebop = { version = "2.4.9", optional = true }
-bincode = { version = "1.3.3", optional = true }
+bincode1 = {package = "bincode", version = "1.3.3", optional = true }
+# Can't call it bincode2 because of a current issue of bincode2
+bincode = {package = "bincode", version = "2.0.0-rc", optional = true }
 bitcode = { version = "0.5.0", optional = true }
 borsh = { version = "1.1.1", features = ["derive"], optional = true }
 # TODO: Unfork after bson adds support for pre-warmed serialization buffers
@@ -95,6 +97,7 @@ default = [
   "abomonation_derive",
   "alkahest",
   # "bebop",
+  "bincode1",
   "bincode",
   "bitcode",
   "borsh",
