--- a/tools/config.json
+++ b/tools/config.json
@@ -5,5 +5,15 @@
         "mk48": "This data set is composed of mk48.io game updates that contain data with many exploitable patterns and invariants.",
         "minecraft_savedata": "This data set is composed of Minecraft player saves that contain highly structured data."
     },
-    "do_not_edit": "<!-- AUTOMATICALLY GENERATED, DO NOT EDIT -->\n<!-- edit README.md.template instead -->"
+    "do_not_edit": "<!-- AUTOMATICALLY GENERATED, DO NOT EDIT -->\n<!-- edit README.md.template instead -->",
+    "features": {
+        "bincode1": {
+            "name": "bincode",
+            "version": "1.3.3"
+        },
+        "bincode": {
+            "name": "bincode",
+            "version": "2.0.0-rc"
+        }
+    }
 }
