--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,14 +50,14 @@ alkahest = { version = "0.1.5", optional = true, features = [
   "nightly",
 ] }
 bebop = { version = "2.4.9", optional = true }
-bincode1 = {package = "bincode", version = "1.3.3", optional = true }
+bincode1 = { package = "bincode", version = "1.3.3", optional = true }
 # Can't call it bincode2 because of a current issue of bincode2
-bincode = {package = "bincode", version = "2.0.0-rc", optional = true }
+bincode = { package = "bincode", version = "2.0.0-rc", optional = true }
 bitcode = { version = "0.5.0", optional = true }
 borsh = { version = "1.1.1", features = ["derive"], optional = true }
 # TODO: Unfork after bson adds support for pre-warmed serialization buffers
 # https://github.com/mongodb/bson-rust/pull/328
-bson = { version = "2.6.0", git = "https://github.com/djkoloski/bson-rust", branch = "master", optional = true }
+bson = { version = "2.9.0", git = "https://github.com/djkoloski/bson-rust", branch = "add_into_vec", optional = true }
 bytecheck = { version = "0.6.11", optional = true }
 bytemuck = { version = "1.14.0", optional = true }
 capnp = { version = "0.18.3", optional = true }
@@ -77,7 +77,8 @@ postcard = { version = "1.0.8", features = ["alloc"], optional = true }
 pot = { version = "3.0.0", optional = true }
 prost = { version = "0.12.1", optional = true }
 rand = "0.8.5"
-rkyv = { version = "0.7.42", features = ["validation"], optional = true }
+# TODO: unfork after rkyv updates to 0.8 or `stdsimd` cfg for nightly in aHash 0.7 is fixed
+rkyv = { version = "0.7.44", git = "https://github.com/rkyv/rkyv", branch = "0.7-hashbrown-0.14", features = ["validation"], optional = true }
 rmp-serde = { version = "1.1.2", optional = true }
 ron = { version = "0.8.1", optional = true }
 serde = { version = "1.0.190", features = ["derive"], optional = true }
