--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,7 @@ ron = { version = "0.8.1", optional = true }
 serde = { version = "1.0.190", features = ["derive"], optional = true }
 serde_bare = { version = "0.5.0", optional = true }
 serde_cbor = { version = "0.11.2", optional = true }
-serde_json = { version = "1.0.108", optional = true }
+serde_json = { version = "1.0.108", features = ["float_roundtrip"], optional = true }
 simd-json = { version = "0.13.4", optional = true }
 simd-json-derive = { version = "0.13.0", optional = true }
 speedy = { version = "0.8.6", optional = true }
