--- a/tools/README.md.template
+++ b/tools/README.md.template
@@ -22,6 +22,8 @@ All tests benchmark the following properties (time or size):
 * **Deserialize**: deserializes a buffer into a normal rust object
 * **Size**: the size of the buffer when serialized
 * **Zlib**: the size of the buffer after zlib compression
+* **Zstd**: the size of the buffer after zstd compression
+* **Zstd Time**: the time taken to compress the object with zstd
 
 Zero-copy deserialization libraries have an additional set of benchmarks:
 
