--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,4 +51,9 @@ jobs:
 
           sudo apt-get install -y capnproto libprotobuf-dev
 
-          cargo build --benches
+          cargo build --benches --features regenerate-capnp,regenerate-flatbuffers,regenerate-prost
+
+      - name: check generated code
+        shell: bash
+        run: |
+          git diff --exit-code && echo 'ok!' || echo 'committed generated code is not up to date!'
