--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,7 +76,7 @@ parity-scale-codec-derive = { version = "3.6.5", optional = true }
 postcard = { version = "1.0.8", features = ["alloc"], optional = true }
 pot = { version = "3.0.0", optional = true }
 pprof = { version = "0.13", features = ["flamegraph"], optional = true }
-prost = { version = "0.12.1", optional = true }
+prost = { version = "0.12.3", optional = true }
 rand = "0.8.5"
 # TODO: unfork after rkyv updates to 0.8 or `stdsimd` cfg for nightly in aHash 0.7 is fixed
 rkyv = { version = "0.7.44", git = "https://github.com/rkyv/rkyv", branch = "0.7-hashbrown-0.14", features = ["validation"], optional = true }
@@ -119,7 +119,6 @@ default = [
   "postcard",
   "pot",
   "prost",
-  "prost-build",
   "rkyv",
   "rmp-serde",
   "ron",
@@ -131,16 +130,16 @@ default = [
   "speedy",
   "savefile"
 ]
+capnp = ["dep:capnp"]
+prost = ["dep:capnp", "dep:prost"]
 simd-json = ["dep:simd-json", "simd-json-derive"]
-
 savefile = ["dep:savefile", "savefile-derive"]
-
 scale = ["parity-scale-codec", "parity-scale-codec-derive"]
 
-# Enable these to use the already-committed generated files for capnp and
-# flatbuffers rather than regenerating them.
-use-committed-capnp = []
-use-committed-flatbuffers = []
+# Enable these features to regenerate generated files rather than using the committed versions.
+regenerate-capnp = ["dep:capnpc"]
+regenerate-flatbuffers = ["dep:flatc-rust"]
+regenerate-prost = ["dep:prost-build"]
 
 [dev-dependencies]
 rand_pcg = "0.3.1"
@@ -148,9 +147,9 @@ rand_pcg = "0.3.1"
 [build-dependencies]
 bebop-tools = "2.8.7"
 capnp = "0.18.3"
-capnpc = "0.18.0"
-flatc-rust = "0.2.0"
-prost-build = { version = "0.12.1", optional = true }
+capnpc = { version = "0.18.0", optional = true }
+flatc-rust = { version = "0.2.0", optional = true }
+prost-build = { version = "0.12.3", optional = true }
 
 [[bench]]
 harness = false
