--- a/pages/Cargo.toml
+++ b/pages/Cargo.toml
@@ -22,9 +22,10 @@ features = [
     'HtmlSelectElement',
 ]
 
-[profile.release]
-codegen-units = 1
-lto = true
-opt-level = "z"
-panic = "abort"
-strip = "debuginfo"
+# TODO: move this profile to the top level, but without affecting benchmarks?
+# [profile.release]
+# codegen-units = 1
+# lto = true
+# opt-level = "z"
+# panic = "abort"
+# strip = "debuginfo"
